--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "pug-html-loader": "^1.1.5",
+    "sass": "^1.49.9",
+    "sass-loader": "^10.0.0",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
